# Proyecto2LP

./: CHANGELOG.md  cosechas.json  herramientas.json  herramientas.txt  main.hs  manipulacionDatos.hs  menu.hs  menuSistema.hs  package.yaml  parcelas.json  proyecto2.cabal  trabajadores.json
.stack-work/: stack.sqlite3
.stack-work/ghci/1809a420/: cabal_macros.h
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
